// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Elements/Tabs CustomStyles smoke-test 1`] = `
<div class="main-section antialiased relative font-nunito text-sm font-normal vertical full ltr">
  <div class="tabs-container mb-5 bg-gray-100 p-4 rounded">
    <div>
      <ul class="flex flex-wrap border-b border-white-light dark:border-[#191e3a]">
        <li class="flex-1">
          <a href="javascript:"
             class="p-3.5 py-2 -mb-[1px] flex items-center border border-transparent hover:text-primary dark:hover:border-b-black !border-white-light !border-b-white text-primary dark:!border-[#191e3a] dark:!border-b-black"
          >
            <span class="mr-2">
              <svg width="24"
                   height="24"
                   viewbox="0 0 24 24"
                   fill="none"
                   xmlns="http://www.w3.org/2000/svg"
              >
                <path d="M3 9L12 2L21 9V20C21 20.5304 20.7893 21.0391 20.4142 21.4142C20.0391 21.7893 19.5304 22 19 22H5C4.46957 22 3.96086 21.7893 3.58579 21.4142C3.21071 21.0391 3 20.5304 3 20V9Z"
                      stroke="currentColor"
                      stroke-width="2"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                >
                </path>
                <path d="M9 22V12H15V22"
                      stroke="currentColor"
                      stroke-width="2"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                >
                </path>
              </svg>
            </span>
            Home
          </a>
        </li>
        <li class="flex-1">
          <a href="javascript:"
             class="p-3.5 py-2 -mb-[1px] flex items-center border border-transparent hover:text-primary dark:hover:border-b-black"
          >
            <span class="mr-2">
              <svg width="24"
                   height="24"
                   viewbox="0 0 24 24"
                   fill="none"
                   xmlns="http://www.w3.org/2000/svg"
              >
                <path d="M20 21V19C20 17.9391 19.5786 16.9217 18.8284 16.1716C18.0783 15.4214 17.0609 15 16 15H8C6.93913 15 5.92172 15.4214 5.17157 16.1716C4.42143 16.9217 4 17.9391 4 19V21"
                      stroke="currentColor"
                      stroke-width="2"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                >
                </path>
                <path d="M12 11C14.2091 11 16 9.20914 16 7C16 4.79086 14.2091 3 12 3C9.79086 3 8 4.79086 8 7C8 9.20914 9.79086 11 12 11Z"
                      stroke="currentColor"
                      stroke-width="2"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                >
                </path>
              </svg>
            </span>
            Profile
          </a>
        </li>
        <li class="flex-1">
          <a href="javascript:"
             class="p-3.5 py-2 -mb-[1px] flex items-center border border-transparent hover:text-primary dark:hover:border-b-black"
          >
            <span class="mr-2">
              <svg width="24"
                   height="24"
                   viewbox="0 0 24 24"
                   fill="none"
                   xmlns="http://www.w3.org/2000/svg"
              >
                <path d="M4 4H20C21.1 4 22 4.9 22 6V18C22 19.1 21.1 20 20 20H4C2.9 20 2 19.1 2 18V6C2 4.9 2.9 4 4 4Z"
                      stroke="currentColor"
                      stroke-width="2"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                >
                </path>
                <path d="M22 6L12 13L2 6"
                      stroke="currentColor"
                      stroke-width="2"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                >
                </path>
              </svg>
            </span>
            Contact
          </a>
        </li>
      </ul>
    </div>
    <div class="pt-5 flex-1 text-sm">
      <div>
        <div>
          <h4 class="font-semibold text-2xl mb-4">
            Custom Styled Tab
          </h4>
          <p>
            This tab container has custom background styling applied via the containerClass prop.
          </p>
        </div>
      </div>
      <div style="display: none;">
        <div>
          <p>
            You can style the container to match your design system.
          </p>
        </div>
      </div>
      <div style="display: none;">
        <div>
          <p>
            The styling is applied to the entire tabs component container.
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Elements/Tabs Default smoke-test 1`] = `
<div class="main-section antialiased relative font-nunito text-sm font-normal vertical full ltr">
  <div class="tabs-container mb-5">
    <div>
      <ul class="flex flex-wrap border-b border-white-light dark:border-[#191e3a]">
        <li class="flex-1">
          <a href="javascript:"
             class="p-3.5 py-2 -mb-[1px] flex items-center border border-transparent hover:text-primary dark:hover:border-b-black !border-white-light !border-b-white text-primary dark:!border-[#191e3a] dark:!border-b-black"
          >
            <span class="mr-2">
              <svg width="24"
                   height="24"
                   viewbox="0 0 24 24"
                   fill="none"
                   xmlns="http://www.w3.org/2000/svg"
              >
                <path d="M3 9L12 2L21 9V20C21 20.5304 20.7893 21.0391 20.4142 21.4142C20.0391 21.7893 19.5304 22 19 22H5C4.46957 22 3.96086 21.7893 3.58579 21.4142C3.21071 21.0391 3 20.5304 3 20V9Z"
                      stroke="currentColor"
                      stroke-width="2"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                >
                </path>
                <path d="M9 22V12H15V22"
                      stroke="currentColor"
                      stroke-width="2"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                >
                </path>
              </svg>
            </span>
            Home
          </a>
        </li>
        <li class="flex-1">
          <a href="javascript:"
             class="p-3.5 py-2 -mb-[1px] flex items-center border border-transparent hover:text-primary dark:hover:border-b-black"
          >
            <span class="mr-2">
              <svg width="24"
                   height="24"
                   viewbox="0 0 24 24"
                   fill="none"
                   xmlns="http://www.w3.org/2000/svg"
              >
                <path d="M20 21V19C20 17.9391 19.5786 16.9217 18.8284 16.1716C18.0783 15.4214 17.0609 15 16 15H8C6.93913 15 5.92172 15.4214 5.17157 16.1716C4.42143 16.9217 4 17.9391 4 19V21"
                      stroke="currentColor"
                      stroke-width="2"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                >
                </path>
                <path d="M12 11C14.2091 11 16 9.20914 16 7C16 4.79086 14.2091 3 12 3C9.79086 3 8 4.79086 8 7C8 9.20914 9.79086 11 12 11Z"
                      stroke="currentColor"
                      stroke-width="2"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                >
                </path>
              </svg>
            </span>
            Profile
          </a>
        </li>
        <li class="flex-1">
          <a href="javascript:"
             class="p-3.5 py-2 -mb-[1px] flex items-center border border-transparent hover:text-primary dark:hover:border-b-black"
          >
            <span class="mr-2">
              <svg width="24"
                   height="24"
                   viewbox="0 0 24 24"
                   fill="none"
                   xmlns="http://www.w3.org/2000/svg"
              >
                <path d="M4 4H20C21.1 4 22 4.9 22 6V18C22 19.1 21.1 20 20 20H4C2.9 20 2 19.1 2 18V6C2 4.9 2.9 4 4 4Z"
                      stroke="currentColor"
                      stroke-width="2"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                >
                </path>
                <path d="M22 6L12 13L2 6"
                      stroke="currentColor"
                      stroke-width="2"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                >
                </path>
              </svg>
            </span>
            Contact
          </a>
        </li>
        <li class="flex-1">
          <a href="javascript:"
             class="p-3.5 py-2 -mb-[1px] flex items-center border border-transparent hover:text-primary dark:hover:border-b-black pointer-events-none text-white-light dark:text-dark"
          >
            Disabled
          </a>
        </li>
      </ul>
    </div>
    <div class="pt-5 flex-1 text-sm">
      <div>
        <div>
          <h4 class="font-semibold text-2xl mb-4">
            We move your world!
          </h4>
          <p class="mb-4">
            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
          </p>
          <p>
            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
          </p>
        </div>
      </div>
      <div style="display: none;">
        <div>
          <div class="flex items-start">
            <div class="w-20 h-20 ltr:mr-4 rtl:ml-4 flex-none">
              <img src="https://html.vristo.sbthemes.com/assets/images/profile-34.jpeg"
                   alt="profile"
                   class="w-20 h-20 m-0 rounded-full ring-2 ring-[#ebedf2] dark:ring-white-dark object-cover"
              >
            </div>
            <div class="flex-auto">
              <h5 class="text-xl font-medium mb-4">
                Media heading
              </h5>
              <p class="text-white-dark">
                Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
              </p>
            </div>
          </div>
        </div>
      </div>
      <div style="display: none;">
        <div>
          <p>
            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
          </p>
        </div>
      </div>
      <div style="display: none;">
      </div>
    </div>
  </div>
</div>
`;

exports[`Elements/Tabs DisabledTab smoke-test 1`] = `
<div class="main-section antialiased relative font-nunito text-sm font-normal vertical full ltr">
  <div class="tabs-container mb-5">
    <div>
      <ul class="flex flex-wrap border-b border-white-light dark:border-[#191e3a]">
        <li class="flex-1">
          <a href="javascript:"
             class="p-3.5 py-2 -mb-[1px] flex items-center border border-transparent hover:text-primary dark:hover:border-b-black !border-white-light !border-b-white text-primary dark:!border-[#191e3a] dark:!border-b-black"
          >
            Active Tab
          </a>
        </li>
        <li class="flex-1">
          <a href="javascript:"
             class="p-3.5 py-2 -mb-[1px] flex items-center border border-transparent hover:text-primary dark:hover:border-b-black"
          >
            Regular Tab
          </a>
        </li>
        <li class="flex-1">
          <a href="javascript:"
             class="p-3.5 py-2 -mb-[1px] flex items-center border border-transparent hover:text-primary dark:hover:border-b-black pointer-events-none text-white-light dark:text-dark"
          >
            Disabled Tab
          </a>
        </li>
      </ul>
    </div>
    <div class="pt-5 flex-1 text-sm">
      <div>
        <div>
          <h4 class="font-semibold text-xl mb-4">
            Active Tab Content
          </h4>
          <p>
            This is the content for the active tab.
          </p>
        </div>
      </div>
      <div style="display: none;">
        <div>
          <p>
            This is content for the second tab.
          </p>
        </div>
      </div>
      <div style="display: none;">
        <div>
          <p>
            This content won't be accessible because the tab is disabled.
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Elements/Tabs NoIcons smoke-test 1`] = `
<div class="main-section antialiased relative font-nunito text-sm font-normal vertical full ltr">
  <div class="tabs-container mb-5">
    <div>
      <ul class="flex flex-wrap border-b border-white-light dark:border-[#191e3a]">
        <li class="flex-1">
          <a href="javascript:"
             class="p-3.5 py-2 -mb-[1px] flex items-center border border-transparent hover:text-primary dark:hover:border-b-black !border-white-light !border-b-white text-primary dark:!border-[#191e3a] dark:!border-b-black"
          >
            Tab 1
          </a>
        </li>
        <li class="flex-1">
          <a href="javascript:"
             class="p-3.5 py-2 -mb-[1px] flex items-center border border-transparent hover:text-primary dark:hover:border-b-black"
          >
            Tab 2
          </a>
        </li>
        <li class="flex-1">
          <a href="javascript:"
             class="p-3.5 py-2 -mb-[1px] flex items-center border border-transparent hover:text-primary dark:hover:border-b-black"
          >
            Tab 3
          </a>
        </li>
      </ul>
    </div>
    <div class="pt-5 flex-1 text-sm">
      <div>
        Content for Tab 1
      </div>
      <div style="display: none;">
        Content for Tab 2
      </div>
      <div style="display: none;">
        Content for Tab 3
      </div>
    </div>
  </div>
</div>
`;
